--- a/redirect.html
+++ b/redirect.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Query Redirect</title>
+
+    <!-- Custom CSS -->
+    <style>
+        .masthead {
+            height: 100vh;
+            min-height: 500px;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,18 +31,20 @@
             Query Redirect
         </a>
     </div>
-    <section style="margin-bottom:-2.5rem;">
-        <div class="jumbotron jumbotron-fluid" style="height:100vh;">
-            <div class="container">
-                <h1 class="display-4">Query Redirect</h1>
-                <p class="lead" id="lead-text">Please wait to be redirected to <code id="redirURLcode"></code>. </p>
-                <hr class="my-4">
-                <p>You can cancel the redirection using the button below. </p>
-                <br>
-                <a class="btn btn-info" style="cursor: pointer; color: white;" onClick="window.location.href = 'http://' + window.location.hostname;" role="button">Cancel Redirect</a>
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 text-center">
+                    <h1 class="display-4">Query Redirect</h1>
+                    <p class="lead" id="lead-text">Please wait to be redirected to <code id="redirURLcode"></code>. </p>
+                    <hr class="my-4">
+                    <p>You can cancel the redirection using the button below. </p>
+                    <br>
+                    <a class="btn btn-info" style="cursor: pointer; color: white;" onClick="window.location.href = 'http://' + window.location.hostname;" role="button">Cancel Redirect</a>
+                </div>
             </div>
         </div>
-    </section>
+    </header>
     <footer class="py-4 bg-dark text-white-50" id="footer">
         <div class="container text-left">
             <small>&copy; 2020 Your Name</small>
