--- a/redirect.html
+++ b/redirect.html
@@ -16,8 +16,8 @@
     <!-- Custom CSS -->
     <style>
         .masthead {
-            height: 100vh;
-            min-height: 500px;
+            height: 100vh!important;
+            min-height: 100vh!important;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -33,7 +33,7 @@
     </div>
     <header class="masthead">
         <div class="container h-100">
-            <div class="row h-100 align-items-center">
+            <div class="row h-100 my-0 align-items-center">
                 <div class="col-12 text-center">
                     <h1 class="display-4">Query Redirect</h1>
                     <p class="lead" id="lead-text">Please wait to be redirected to <code id="redirURLcode"></code>. </p>
