--- a/index.html
+++ b/index.html
@@ -19,45 +19,55 @@
             padding-top: 5rem;
             padding-bottom: 5rem;
         }
+        
+        .masthead {
+            height: 100vh!important;
+            min-height: 100vh!important;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
     </style>
 </head>
 
 <body>
-    <div class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <a class="navbar-brand" onClick="document.body.scrollTop = 0; document.documentElement.scrollTop = 0;" style="cursor: pointer;">
+    <header class="masthead">
+        <div class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+            <a class="navbar-brand" onClick="document.body.scrollTop = 0; document.documentElement.scrollTop = 0;" style="cursor: pointer;">
             Query Redirect
         </a>
-    </div>
-    <section>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">Query Redirect Info Page</h1>
-                <p class="lead">This is an informational page about a simple query redirect page made using pure Javascript. You can invoke the actual redirect script using <code>http://yourdomain.com/redirect.html?[website]</code>, and it can be modified to your liking.</p>
-                <hr class="my-4">
-                <p>This template was created using the Bootstrap 4.3 library. </p>
-            </div>
         </div>
-    </section>
-    <section class="section-padding">
-        <div class="container">
-            <h1>Try it!</h1>
-            <p>This simulates what it would be like to visit your redirection page. Make sure to follow the proper format, or it won't work.</p>
-            <br>
-            <div class="row">
-                <div class="col-lg-12">
-                    <h4>URL to redirect.html</h4>
-                    <p>Example: <code>siteurl.com/redirect.html</code></p>
-                    <input placeholder="siteurl.com/redirect.html" class="form-control" id="siteurl" />
-                    <br>
-                    <h4>URL you wish to redirect to</h4>
-                    <p>Example: <code>google.com</code></p>
-                    <input placeholder="google.com" class="form-control" id="redirurl" />
-                    <br>
-                    <button onClick="queryRedirect();" class="btn btn-info">Redirect!</button>
+        <section>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class="display-4">Query Redirect Info Page</h1>
+                    <p class="lead">This is an informational page about a simple query redirect page made using pure Javascript. You can invoke the actual redirect script using <code>http://yourdomain.com/redirect.html?[website]</code>, and it can be modified to your liking.</p>
+                    <hr class="my-4">
+                    <p>This template was created using the Bootstrap 4.3 library. </p>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section class="section-padding">
+            <div class="container">
+                <h1>Try it!</h1>
+                <p>This simulates what it would be like to visit your redirection page. Make sure to follow the proper format, or it won't work.</p>
+                <br>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h4>URL to redirect.html</h4>
+                        <p>Example: <code>siteurl.com/redirect.html</code></p>
+                        <input placeholder="siteurl.com/redirect.html" class="form-control" id="siteurl" />
+                        <br>
+                        <h4>URL you wish to redirect to</h4>
+                        <p>Example: <code>google.com</code></p>
+                        <input placeholder="google.com" class="form-control" id="redirurl" />
+                        <br>
+                        <button onClick="queryRedirect();" class="btn btn-info">Redirect!</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
     <footer class="py-4 bg-dark text-white-50" id="footer">
         <div class="container text-left">
             <small>&copy; 2020 Your Name</small>
