--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
     <header class="masthead">
-        <div class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand" onClick="document.body.scrollTop = 0; document.documentElement.scrollTop = 0;" style="cursor: pointer;">
             Query Redirect
         </a>
