--- a/redirect.html
+++ b/redirect.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" onClick="document.body.scrollTop = 0; document.documentElement.scrollTop = 0;" style="cursor: pointer;">
             Query Redirect
         </a>
