--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             background-position: center;
             background-repeat: no-repeat;
         }
+        body { padding-top: 2.5rem!important; }
     </style>
 </head>
 
