--- a/redirect.html
+++ b/redirect.html
@@ -22,6 +22,7 @@
             background-position: center;
             background-repeat: no-repeat;
         }
+        body { padding-top: 2.5rem!important; }
     </style>
 </head>
 
